# farmbot

./: LICENSE  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  farmbot_jni.cpp
app/src/main/java/com/rufatronics/farmbot/: FarmBotEngine.kt  LlamaBridge.kt  MainActivity.kt  ModelAssets.kt  VisionClassifier.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
